<resources>

    <!--Titles-->
    <string name="app_name">Bontact</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="exit_title">exit</string>
    <string name="onlinevisitors_title">Online visitors</string>
    <string name="login_title">Login</string>
    <string name="inbox_title">Inbox</string>
    <string name="settings_title">Settings</string>
    <string name="title_inner_conversation">Visitor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Variables -->
    <string name="agent">agent</string>
    <string name="settings">settings</string>
    <string name="token">token</string>
    <string name="idCustomer">idCustomer</string>
    <string name="name">name</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="sp_user_details">user_details</string>
    <string name="sp_count_numbers">sp_count_numbers</string>
    <string name="count_unread_conversation">count_unread_conversation</string>
    <string name="notify_adapter_key_action">action</string>
    <string name="notify_adapter_key_item_postion">position</string>
    <string name="notify_adapter_key_id_surfer">id_surfer</string>

    <!--text view messegaes -->
    <string name="welcome_name_msg">Hi</string>
    <string name="login">Log in</string>
    <!--check if itis one or more v/  and change the string according to-->
    <string name="txt_online_v"><b>online site visitors</b>\n see who\'s in your site, and invite them for a chat</string>
    <string name="txt_request_v"><b>new visitors requests</b>\n
     manage all conversation with your visitors</string>
    <string name="welcome_msg">Manage and convert your visitors</string>
    <string name="logged_in_as">logged in as </string>
    <string name="visitor_details">Visitor details</string>
    <string name="send_in_email">Send in Email</string>
    <string name="open_Ticket">Open Ticket</string>
    <string name="tbd">Don\'t worry!<br /> coming soon....:)</string>
    <string name="webcall_cancled">The web call was cancelled by the visitor.</string>
    <string name="taken_by_another_agent">Taken by another agent</string>
    <string name="forgot_pass_title">Password recovery</string>
    <string name="forgot_pass_sub_title">Please type your e-mail address:</string>
    <string name="forgot_pass_error_message">Invalid e-mail address</string>
    <string name="forgot_pass_response_success_message">Request sent, please check your inbox</string>
    <string name="forgot_pass_response_failure_message">Username not found, please try again</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="invite_for_chat">Invite for chat</string>
    <string name="no_msg_title">No messages yet</string>
    <string name="dialingMsg">Please wait while we connect you, our system will be calling you shortly</string>
    <string name="no_visitors_title">There aren\'t online visitors in your site.</string>
    <string name="no_conversations_title">No messages yet</string>
    <string name="saving">saving...</string>
    <string name="saved">saved</string>
    <string name="error_invite">Oops, there was a problem inviting this person. Please try again.</string>
    <!--place holders-->
    <string name="email_place_holder">reply to email </string>
    <string name="chat_place_holder">reply to chat </string>
    <string name="sms_place_holder"> reply to sms</string>
    <string name="phone_call_place_holder">press to phone call </string>


    <!--Error messages -->
    <string name="empty_user_name">Please enter username</string>
    <string name="empty_password">Please enter password</string>

    <string name="invalid_login_details">The details you entered are incorrect.</string>
    <string name="user_not_exists">the user is not found please try again</string>
    <string name="some_problem">Please re enter the details. there was some problem </string>
    <string name="network_problem">Please check your internet connections!</string>
    <string name="phone_number_is_not_provided">Phone number isn\'t provided</string>
    <string name="email_address_is_not_provided">Email address isn\'t provided</string>
    <string name="empty_email_fields_msg">Please fill all required fields</string>


    <!--URLS to api -->
    <string name="socket_url">https://prd-socket01-eus.azurewebsites.net/</string>
    <string name="dev_domain_api">https://prd-api01-eus.azurewebsites.net/api/</string>
    <string name="domain_api">https://prd-api01-eus.azurewebsites.net/api/</string>
    <string name="base_dev_api">prd-api01-eus.azurewebsites.net</string>
    <string name="base_prd_api">prd-api01-eus.azurewebsites.net</string>
    <string name="rout_api">api</string>
    <string name="conversation_old_api">getConversations</string>
    <string name="contacts_rout_api">contacts</string>
    <string name="read_conversation_api">readconversation</string>
    <string name="conversation_by_id_api">conversationvisitor</string>
    <string name="count_conversation_api">getmainConversations</string>
    <string name="inner_conversation_api">openconversation</string>
    <string name="login_api">login</string>
    <string name="update_settings_api">updatePushNotification</string>
    <string name="unregister_notifications_api">removePushNotification</string>
    <string name="forgot_pass_url">https://dashboard.bontact.com/html/login.aspx?func=getLostPassword</string>
    <string name="agents_api">agents</string>
    <string name="conversations_api">getconversations</string>

    <!-- time strings-->
    <string name="minutes">min ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days">days ago</string>
    <string name="hours">hours ago</string>
    <string name="hour">an hour ago</string>

    <!--unread msg-->
    <string name="unread_sms">Unread SMS, read now.</string>
    <string name="unread_chat">Unread Chat, read now. </string>
    <string name="unread_email">Unread Email, read now.</string>
    <string name="unread_callback">recorded call.</string>
    <string name="unread_webcall">recorded call</string>

    <!--icons-->

    <string name="email_icon">&#xf0e0;</string>
    <string name="chat_icon">&#xf086;</string>
    <string name="microphone_icon">&#xf130;</string>
    <string name="phone_square_icon">&#xf098;</string>
    <string name="device_icon">&#xf10b;</string>
    <!-- <string name="phone_calling_icon">&#xf2a0;</string>&#xf095;-->
    <string name="phone_calling_icon">&#xf095;</string>
    <!-- <string name="sms_icon">&#xf27a;</string>-->
    <string name="sms_icon">&#xf10b;</string>
    <string name="arrow_click">&#xf105;</string>
    <string name="password_icon">&#xf023;</string>
    <string name="user_name_icon">&#xf183;</string>
    <string name="play_btn_icon">&#xf04b;</string>
    <string name="pause_btn_icon">&#xf04c;</string>
    <string name="lock_icon">&#xf023;</string>
    <!--fonts names-->
    <string name="font_awesome">fontawesome-webfont.ttf</string>


    <!--mediaplayer errors-->
    <string name="short_record">short</string>
    <string name="account_not_allow">account not allow</string>
    <!--channel strings-->
    <string name="callback">callback</string>
    <string name="sms">sms</string>
    <string name="chat">chat</string>
    <string name="email">email</string>
    <string name="whatsapp">whatsapp</string>

    <string name="SenderId">547186625448</string>
    <!--<string name="SenderId">687621046955</string>-->


    <string name="gcm_token">gcm_token</string>
    <string name="change_visitors_list_action">com.example.chaya.bontact.changeInVisitors</string>
    <string name="count_number_action">count_number_action</string>
    <string name="action_typing">action_typing</string>
    <string name="change_visitor_online_state">change_visitor_online_state</string>
    <string name="online_state">online_state</string>
    <string name="id_surfer">id_surfer</string>
    <!--time formats-->
    <string name="dateFullFormat">yyyy-MM-dd HH:mm:ss.SSS</string>
    <string name="dd_mm_yy_format">dd-mm-yy</string>
    <string name="hh_mm_format">HH:mm</string>
    <string name="hh_mm_ss">HH:mm:ss</string>

    <!--broadcast keys and actions-->
    <string name="response_server_call_action">response_server_call_action</string>
    <string name="response_key">response</string>
    <string name="is_successed_key">is_successed</string>
    <string name="error_type_key">error_type</string>
    <string name="first_tab_title_key">first_tab</string>
    <string name="response_server_call_to_ui_action">response_server_call_to_ui_action</string>
    <string name="request_name_key">request_name</string>
    <string name="action_login_completed">action_login_completed</string>
    <string name="change_unread_conversations_actiona">change_unread_conversations_actiona</string>
    <string name="change_unread_conversations_action">change_unread_conversations_action</string>

    <!--settings strings-->
    <string name="new_message_header">New message</string>
    <string name="new_message_description">notify me every new message</string>
    <string name="new_visitor_header">New visitor</string>
    <string name="new_visitor_description">notify me every new visitor</string>
    <string name="general_header">General</string>
    <string name="new_msg_category">new_msg_category</string>
    <string name="new_visitor_category">new_visitor_category</string>
    <string name="push_notification">push notifications</string>
    <string name="push_notification_sound">sound</string>
    <string name="push_notification_vibrate">vibrate</string>
    <string name="new_message_vibrate_key">new_message_vibrate_key</string>
    <string name="new_visitor_vibrate_key">new_visitor_vibrate_key</string>
    <string name="new_message_sound_key">new_message_sound_key</string>
    <string name="new_visitor_sound_key">new_visitor_sound_key</string>
    <string name="new_visitor_push_key">new_visitor_push_key</string>
    <string name="new_message_push_key">new_message_push_key</string>

    <string name="empty_inner_data_action">empty_inner_data_action</string>
    <string name="invite_complete_action">invite_complete_action</string>
    <string name="change_conversation_list_action">change_conversation_list_action</string>
    <string name="first_fragment">first_fragment</string>
    <string name="push_notification_type">push_notification_type</string>
    <string name="about_us_title">about us</string>
    <string name="disconnect_account_title">log out</string>
    <string name="disconnect_account_key">disconnect_account_key</string>
    <string name="app_version_title">app version: V3.0</string>
    <string name="invalid_callback_phone_number">Invaild phone number</string>
    <string name="invalid_sms_content">Please enter your message</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="current_page">current_page</string>
    <string name="gcm_pref">gcm_pref</string>
    <string name="empty_conversation_data_action">empty_conversation_data_action</string>
    <string name="assign_to">assigned to</string>
    <string name="typing_name_key">typing_name_key</string>
    <string name="typing_state_key">typing_state_key</string>


</resources>


