<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <!-- <group android:checkableBehavior="single">-->
        <item android:title="Navigate">
            <menu>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/dashboard_title"
            />
        <item
            android:id="@+id/nav_online_v"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/onlinevisitors_title" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/inbox_title" />
            </menu>
        </item>
   <!-- </group>-->

    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="Settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="Exit" />
        </menu>
    </item>

</menu>
