<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/chanel_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:text="@string/sms_icon"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/chanel_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/chanel_sms"
        android:layout_toStartOf="@id/chanel_sms"
        android:padding="8dp"
        android:text="@string/chat_icon"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/chanel_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/chanel_chat"
        android:layout_toStartOf="@id/chanel_chat"
        android:padding="8dp"
        android:text="@string/email_icon"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/chanel_phone_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/chanel_email"
        android:layout_toStartOf="@id/chanel_email"
        android:padding="8dp"
        android:text="@string/phone_calling_icon"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>