<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="50dp"
    android:paddingTop="5dp">

    <RelativeLayout
        android:id="@+id/visitor_chat_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dp"
        android:background="@drawable/background_visitor_message">

        <TextView
            android:id="@+id/chanelIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/email_icon"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/chanelIcon"
            android:layout_toRightOf="@id/chanelIcon"
            android:text="visitor"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/chanelIcon"
            android:layout_marginTop="4dp"
            android:text="@string/play_btn_icon" />

        <TextView
            android:id="@+id/pause_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/chanelIcon"
            android:layout_marginTop="4dp"
            android:text="@string/pause_btn_icon"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seekbar_visitor_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/play_btn"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_toEndOf="@id/play_btn"
            android:layout_toRightOf="@id/play_btn"
            android:indeterminate="false" />

        <TextView
            android:id="@+id/date"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/seekbar_visitor_record"
            android:text="12:34"
            android:textSize="10sp" />
    </RelativeLayout>
</FrameLayout>

